# neuroSangSpider

./: .gitattributes  .gitignore  .pre-commit-config.yaml  BUILD_GUIDE.md  README.md  VERSION_INFO.md  build.bat  build.ps1  build_stats.json  generate_version_info.py  main.py  main.spec  pyproject.toml  requirements.txt  version_info.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml  lint.yml  sync-other.yml
ExtendPack/datatime/: 20250407_videos_list.txt  20250413_videos_extend.json  20250413_videos_list.txt
ExtendPack/extend/: 0u_extend.json  0u_extend.txt  21_extend.json  21_extend.txt
SongListManager/: SongList.py
common/: config.py
crawlerCore/: main.py  searchCore.py  videosList.py
data/: 1880487363_data.json  1880487363_data.txt  21_extend.txt  22535350_data.json  22535350_data.txt  351692111_data.json  351692111_data.txt  3546612622166788_data.json  3546612622166788_data.txt  483178955_data.json  483178955_data.txt  5971855_data.json  5971855_data.txt  690857494_data.json  690857494_data.txt  example_extend.json  extend_video_data.json  qcy_Favorites.txt  qcy_Favorites_extend.json  search_data.json  search_data.txt  videoList.json  videos_list.txt
infoManager/: SongList.py  data.json  main.py  songList.py
musicDownloader/: downloader.py  main.py
src/: app_context.py  build_info.py  config.py  song_list.py
src/bili_api/: __init__.py  common.py  converters.py  music.py  search.py  videos.py
src/common/: config.py
ui/: main_windows.py  main_windows.ui  player.ui
utils/: bili_tools.py  fileManager.py  file_tools.py  player_tools.py  string_tools.py  text_tools.py  textbroswer_tools.py  tipbar_tools.py
(+62 files in other folders)
